# tikv

./: Cargo.toml  Makefile
benches/coprocessor_executors/hash_aggr/: mod.rs  util.rs
benches/coprocessor_executors/index_scan/: util.rs
benches/coprocessor_executors/integrated/: mod.rs
benches/coprocessor_executors/selection/: mod.rs
benches/coprocessor_executors/table_scan/: util.rs
benches/coprocessor_executors/top_n/: util.rs
benches/coprocessor_executors/util/: executor_descriptor.rs  fixture.rs  mod.rs
benches/hierarchy/mvcc/: mod.rs
benches/misc/raftkv/: mod.rs
benches/misc/serialization/: bench_serialization.rs
cmd/: Cargo.toml
components/backup/: Cargo.toml
components/backup/src/: endpoint.rs  errors.rs  lib.rs  service.rs  writer.rs
components/backup/tests/integrations/: test_backup.rs
components/cdc/src/: errors.rs
components/cop_datatype/src/def/: field_type.rs
components/engine/: Cargo.toml
components/engine/src/rocks/: mod.rs
components/engine_rocks/: Cargo.toml
components/engine_traits/: Cargo.toml
components/keys/: Cargo.toml
components/log_wrappers/: Cargo.toml
components/pd_client/: Cargo.toml
components/resolved_ts/src/: scanner.rs
components/sst_importer/: Cargo.toml
components/sst_importer/src/: sst_importer.rs
components/test_coprocessor/: Cargo.toml
components/test_raftstore/: Cargo.toml
components/test_raftstore/src/: cluster.rs  util.rs
components/test_sst_importer/: Cargo.toml
components/test_storage/: Cargo.toml
components/test_storage/src/: assert_storage.rs
components/test_util/: Cargo.toml
components/tidb_query/: Cargo.toml
components/tidb_query/src/codec/: convert.rs
components/tidb_query/src/rpn_expr/: impl_cast.rs
components/tidb_query_datatype/: Cargo.toml
components/tikv_util/: Cargo.toml
components/tikv_util/src/: lib.rs  macros.rs
components/tipb_helper/: Cargo.toml
fuzz/targets/: Cargo.toml
src/: config.rs
src/coprocessor/: endpoint.rs  error.rs
src/coprocessor/codec/: error.rs
src/coprocessor/codec/chunk/: column.rs
src/coprocessor/codec/data_type/: vector.rs
src/coprocessor/dag/: builder.rs
src/coprocessor/dag/aggr_fn/: parser.rs  util.rs
src/coprocessor/dag/batch/: interface.rs
src/coprocessor/dag/batch/executors/: fast_hash_aggr_executor.rs  selection_executor.rs  simple_aggr_executor.rs  slow_hash_aggr_executor.rs  stream_aggr_executor.rs  top_n_executor.rs
src/coprocessor/dag/batch/executors/util/: mod.rs
src/coprocessor/dag/expr/: builtin_arithmetic.rs  builtin_cast.rs  builtin_compare.rs  builtin_control.rs  builtin_miscellaneous.rs  builtin_time.rs  column.rs  ctx.rs  mod.rs  scalar_function.rs
src/coprocessor/dag/rpn_expr/: impl_arithmetic.rs  impl_cast.rs  impl_compare.rs  impl_control.rs  impl_like.rs  impl_op.rs  mod.rs
src/coprocessor/dag/rpn_expr/types/: expr.rs  expr_builder.rs  expr_eval.rs  mod.rs  test_util.rs
src/import/: client.rs  common.rs  engine.rs  import.rs  kv_importer.rs  kv_server.rs  kv_service.rs  sst_importer.rs  sst_service.rs  stream.rs  test_helpers.rs
src/pd/: pd.rs
src/raftstore/: errors.rs
src/raftstore/coprocessor/split_check/: half.rs  keys.rs  size.rs  table.rs
src/raftstore/store/: bootstrap.rs  msg.rs  peer.rs  peer_storage.rs  region_snapshot.rs  snap.rs
src/raftstore/store/fsm/: apply.rs  peer.rs
src/raftstore/store/worker/: consistency_check.rs  pd.rs  read.rs
src/server/: debug.rs  gc_worker.rs  raft_client.rs  server.rs  transport.rs
src/server/gc_worker/: gc_worker.rs  mod.rs
src/server/lock_manager/: deadlock.rs  waiter_manager.rs
src/server/service/: debug.rs  kv.rs
src/storage/: errors.rs  mod.rs
src/storage/kv/: cursor.rs  cursor_builder.rs  mod.rs  raftkv.rs  rocksdb_engine.rs
src/storage/lock_manager/: client.rs  deadlock.rs  waiter_manager.rs
src/storage/mvcc/: mod.rs  txn.rs
src/storage/mvcc/reader/: point_getter.rs  reader.rs
src/storage/mvcc/reader/scanner/: backward.rs  forward.rs  mod.rs
src/storage/txn/: commands.rs  mod.rs  process.rs  scheduler.rs  store.rs
src/storage/txn/actions/: check_txn_status.rs  cleanup.rs  prewrite.rs
src/storage/txn/commands/: prewrite.rs  rollback.rs
tests/: Cargo.toml
tests/benches/deadlock_detector/: mod.rs
tests/benches/hierarchy/mvcc/: mod.rs
tests/benches/hierarchy/txn/: mod.rs
tests/failpoints/cases/: test_upgrade.rs
tests/integrations/config/: mod.rs
tests/integrations/coprocessor/: test_select.rs
tests/integrations/import/: kv_service.rs  sst_service.rs
tests/integrations/raftstore/: test_merge.rs  test_prevote.rs  test_region_heartbeat.rs
tests/integrations/server/: raft_client.rs
tests/integrations/storage/: test_raft_storage.rs
