[package]
name = "tests"
version = "0.0.1"
edition = "2018"
publish = false

[[test]]
name = "failpoints"
path = "failpoints/mod.rs"
required-features = ["failpoints"]

[[test]]
name = "integrations"
path = "integrations/mod.rs"

[[bench]]
name = "raftstore"
harness = false
path = "benches/raftstore/mod.rs"

[[bench]]
name = "coprocessor_executors"
harness = false
path = "benches/coprocessor_executors/mod.rs"

[[bench]]
name = "hierarchy"
harness = false
path = "benches/hierarchy/mod.rs"

[[bench]]
name = "misc"
path = "benches/misc/mod.rs"

[[bench]]
name = "deadlock_detector"
harness = false
path = "benches/deadlock_detector/mod.rs"

[features]
default = ["tikv/jemalloc"]
failpoints = ["tikv/failpoints"]
profiling = ["profiler/profiling"]
protobuf-codec = [
  "tikv/protobuf-codec",
  "kvproto/protobuf-codec",
  "pd_client/protobuf-codec",
  "grpcio/prost-codec",
  "raft/protobuf-codec",
  "engine/protobuf-codec",
  "tipb/prost-codec",
  "tidb_query/prost-codec",
  "tipb_helper/protobuf-codec",
  "tidb_query_datatype/protobuf-codec",
  "tikv_util/protobuf-codec",
  "test_util/protobuf-codec",
  "test_raftstore/protobuf-codec",
  "test_storage/protobuf-codec",
  "test_coprocessor/protobuf-codec",
]
prost-codec = [
  "tikv/prost-codec",
  "kvproto/prost-codec",
  "pd_client/prost-codec",
  "grpcio/prost-codec",
  "raft/prost-codec",
  "engine/prost-codec",
  "tipb/prost-codec",
  "tidb_query/prost-codec",
  "tipb_helper/prost-codec",
  "tidb_query_datatype/prost-codec",
  "tikv_util/prost-codec",
  "test_util/prost-codec",
  "test_raftstore/prost-codec",
  "test_storage/prost-codec",
  "test_coprocessor/prost-codec",
]

[dependencies]
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
tikv_util = { path = "../components/tikv_util" }
pd_client = { path = "../components/pd_client" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
tikv = { path = "../" }
uuid = { version = "0.7", features = [ "serde", "v4" ] }
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false }
tidb_query = { path = "../components/tidb_query" }
grpcio = { version = "0.5.0-alpha.3", features = [ "openssl-vendored" ], default-features = false }
tempfile = "3.0"
futures = "0.1"
futures-cpupool = "0.1"
protobuf = "2.8"
raft = { version = "0.6.0-alpha" , default-features = false }
engine = { path = "../components/engine" }
tokio-threadpool = "0.1.13"
hex = "0.3"
toml = "0.4"
crc = "1.8"
rand = "0.6.5"


[dev-dependencies]
# See https://bheisler.github.io/criterion.rs/book/user_guide/known_limitations.html for the usage
# of `real_blackbox` feature.
criterion = { version = "0.3", features=['real_blackbox'] }
criterion-papi = "0.1"
criterion-cpu-time = "0.1"
arrow = "0.10.0"
rand_xorshift = "0.1"
profiler = { path = "../components/profiler" }
panic_hook = { path = "../components/panic_hook" }
tipb_helper = { path = "../components/tipb_helper" }
tidb_query_datatype = { path = "../components/tidb_query_datatype" }
test_util = { path = "../components/test_util" }
test_raftstore = { path = "../components/test_raftstore" }
test_storage = { path = "../components/test_storage" }
test_coprocessor = { path = "../components/test_coprocessor" }
byteorder = "1.2"
serde_json = "1.0"
