[package]
name = "backup"
version = "0.0.1"
edition = "2018"
publish = false

[[test]]
name = "integrations"
path = "tests/integrations/mod.rs"

[features]
prost-codec = [
  "raft/prost-codec",
  "engine/prost-codec",
  "tikv/prost-codec",
  "kvproto/prost-codec",
  "tikv_util/prost-codec",
  "grpcio/prost-codec",
]
protobuf-codec = [
  "raft/protobuf-codec",
  "engine/protobuf-codec",
  "tikv/protobuf-codec",
  "kvproto/protobuf-codec",
  "tikv_util/protobuf-codec",
  "grpcio/protobuf-codec",
]

[dependencies]
tikv = { path = "../../" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
protobuf = "2.8"
raft = { version = "0.6.0-alpha", default-features = false }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
# better to not use slog-global, but pass in the logger
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
engine = { path = "../engine" }
tikv_util = { path = "../tikv_util" }
futures = "0.1"
tempfile = "3.0"
tokio-threadpool = "0.1"
grpcio = { version = "0.5.0-alpha.3", features = [ "openssl-vendored" ], default-features = false }
url = "2.0"
hex = "0.3"
external_storage = { path = "../external_storage" }
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.3"
failure = "0.1"
tikv_alloc = { path = "../tikv_alloc" }
tidb_query = { path = "../tidb_query" }

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
rev = "7dd3d42f0c21384950afe6a46ed85352acf71625"
default-features = false
features = ["nightly", "push", "process"]

[dev-dependencies]
rand = "0.7"
test_util = { path = "../test_util" }
test_raftstore = { path = "../test_raftstore" }
uuid = { version = "0.7", features = [ "serde", "v4" ] }
