[package]
name = "test_coprocessor"
version = "0.0.1"
edition = "2018"
publish = false

[features]
prost-codec = [
  "tikv/prost-codec",
  "tipb/prost-codec",
  "kvproto/prost-codec",
  "tikv_util/prost-codec",
  "test_storage/prost-codec",
  "tidb_query/prost-codec",
  "prost"
]
protobuf-codec = [
  "tikv/protobuf-codec",
  "tipb/protobuf-codec",
  "kvproto/protobuf-codec",
  "tikv_util/protobuf-codec",
  "tidb_query/protobuf-codec",
  "test_storage/protobuf-codec",
]

[dependencies]
tikv = { path = "../../" }
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
prost = { git = "https://github.com/danburkert/prost", rev = "1944c27c3029d01ff216e7b126d846b6cf8c7d77", optional = true }
protobuf = "2"
futures = "0.1"

tikv_util = { path = "../tikv_util" }
test_storage = { path = "../test_storage" }
tidb_query = { path = "../tidb_query" }
