[package]
name = "test_raftstore"
version = "0.0.1"
edition = "2018"
publish = false

[features]
prost-codec = [
  "tikv_util/prost-codec",
  "tikv/prost-codec",
  "kvproto/prost-codec",
  "raft/prost-codec",
  "grpcio/prost-codec",
  "engine/prost-codec",
  "pd_client/prost-codec",
]
protobuf-codec = [
  "tikv_util/protobuf-codec",
  "tikv/protobuf-codec",
  "kvproto/protobuf-codec",
  "raft/protobuf-codec",
  "grpcio/protobuf-codec",
  "engine/protobuf-codec",
  "pd_client/protobuf-codec",
]

[dependencies]
tikv_util = { path = "../tikv_util" }
tikv = { path = "../../" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
protobuf = "2.8"
tempfile = "3.0"
raft = { version = "0.6.0-alpha" , default-features = false }
futures = "0.1"
tokio-timer = "0.2"
tokio-threadpool = "0.1"
grpcio = { version = "0.5.0-alpha.3", features = ["openssl-vendored"], default-features = false }
rand = "0.7"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
# better to not use slog-global, but pass in the logger
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
engine = { path = "../engine" }
hex = "0.3"
pd_client = { path = "../pd_client" }
