[package]
name = "test_storage"
version = "0.0.1"
edition = "2018"
publish = false

[features]
prost-codec = [
  "tikv_util/prost-codec",
  "tikv/prost-codec",
  "tikv_util/prost-codec",
  "test_raftstore/prost-codec",
  "kvproto/prost-codec"
]
protobuf-codec = [
  "tikv_util/protobuf-codec",
  "tikv/protobuf-codec",
  "tikv_util/protobuf-codec",
  "test_raftstore/protobuf-codec",
  "kvproto/protobuf-codec"
]

[dependencies]
tikv_util = { path = "../tikv_util" }
tikv = { path = "../../" }
test_raftstore = { path = "../test_raftstore" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
futures = "0.1"
