[package]
name = "tipb_helper"
version = "0.0.1"
edition = "2018"
publish = false

[features]
prost-codec = ["tidb_query_datatype/prost-codec", "tipb/prost-codec"]
protobuf-codec = ["tidb_query_datatype/protobuf-codec", "tipb/protobuf-codec"]

[dependencies]
tipb = { git = "https://github.com/pingcap/tipb.git", default-features = false }
codec = { path = "../codec" }
tidb_query_datatype = { path = "../tidb_query_datatype" }
